review_tool/test-cases/bad/bad-shoptet-overwrite.js
window.Shoptet = {myConfig: true};

shoptet.cart = {};

Shoptet.customer = null;
